--- a/style.css
+++ b/style.css
@@ -1,3 +1,7 @@
+@import url("https://fonts.googleapis.com/css2?family=Oswald:wght@200..700&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
+
 * {
   box-sizing: border-box;
   margin: 0;
@@ -6,5 +10,302 @@
 }
 
 body {
-    padding: 20px;
+  /* padding: 20px; */
+  /* width: ; */
+  /* background-color: rgb(209, 187, 146); */
+  background-color: #f5f5f5;
+  display: flex;
+  flex-direction: column;
+  /* justify-content: center; */
+  align-items: center;
 }
+
+main {
+  width: 1300px;
+  background-color: #f5f5f5;
+  /* border-radius:  10px  10px 10px 10px; */
+}
+
+header {
+  background-color: #232f3e;
+  padding: 20px;
+  width: 100%;
+}
+
+header {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+header nav ul {
+  display: flex;
+  list-style: none;
+  align-items: center;
+}
+
+header nav ul li{
+  margin: 0 15px;
+  transition: transform 0.2s;
+}
+
+header nav ul li:hover {
+  transform: scale(1.5);
+  font-weight: bold;
+}
+
+header nav a {
+  color: whitesmoke;
+  text-decoration: none;
+  font-size: 18;
+  font-weight: 500;
+}
+
+section {
+  background-color: white;
+  margin: 20px 0;
+  border-radius: 10px;
+}
+
+#product {
+  display: flex;
+}
+
+.prod-img {
+  width: 600px;
+  height: 600px;
+  background-color: antiquewhite;
+  background-repeat: no-repeat;
+  background-size: cover;
+  display: flex;
+  justify-content: space-around;
+  padding-bottom: 25px;
+  align-items: flex-end;
+  background-image: url(./images/products/m16-bg.png);
+  flex: 1;
+  margin: 30px;
+  border-radius: 20px;
+}
+
+.sub-img {
+  border-radius: 10px;
+  transition: 0.5s;
+}
+
+.sub-img:hover {
+  cursor: zoom-in;
+  /* box-shadow: 0px 0px 10px #000000; */
+}
+
+.prod-info {
+  flex: 1;
+  padding: 30px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+
+h1 {
+  font-family: "Montserrat", sans-serif;
+  font-weight: 500;
+  font-size: 35px;
+}
+
+.review {
+  padding-top: 10px;
+}
+
+.review p {
+  display: inline;
+  padding-left: 10px;
+}
+
+.spec {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  padding: 20px 0;
+}
+
+.spec p {
+  font-size: 30px;
+  font-weight: 600;
+}
+
+select {
+  height: 45px;
+  text-align: center;
+  border: 2px solid grey;
+  background-color: white;
+  border-radius: 10px;
+  padding: 5px;
+}
+
+.description p {
+  font-weight: 300;
+  color: grey;
+  padding-bottom: 30px;
+}
+
+.description button {
+  border: 0px;
+  padding: 20px 40px;
+  background-color: #232f3e;
+  color: whitesmoke;
+  font-weight: 500;
+  font-size: 20px;
+  border-radius: 10px;
+  transition: transform 0.2s;
+}
+
+.description button:hover {
+  transform: scale(1.1);
+  cursor: pointer;
+}
+
+#recommendation {
+  padding: 30px;
+}
+
+#recommendation h2 {
+  text-align: center;
+  font-size: 30px;
+  font-weight: 400;
+  /* padding: 30px; */
+  margin-bottom: 30px;
+}
+
+.prod-cards {
+  display: flex;
+  justify-content: space-between;
+}
+
+.card {
+  display: flex;
+}
+
+.card img {
+  border-radius: 15px;
+  transition: transform 0.2s;
+}
+
+.card img:hover {
+  transform: scale(1.2);
+}
+
+.card-info {
+  padding-left: 15px;
+  font-size: 15px;
+}
+
+.card-info a {
+  color: black;
+  text-decoration: none;
+}
+
+.card-info a:hover {
+  text-decoration: underline;
+}
+
+.price {
+  font-weight: 500;
+}
+
+#reviews {
+  padding: 30px;
+}
+
+#reviews h2 {
+  font-size: 30px;
+  font-weight: 400;
+}
+
+.prod-review {
+  display: flex;
+  margin: 30px 0;
+}
+
+.profile-icon {
+  border-radius: 50%;
+}
+
+.customer {
+  min-width: 380px;
+  display: flex;
+  gap: 15px;
+}
+
+.review-info h3 {
+  font-weight: 600;
+}
+
+.review-info p {
+  font-weight: 300;
+}
+
+.review-info h3 a {
+  color: black;
+  text-decoration: none;
+}
+
+.review-info h3 a:hover {
+  text-decoration: underline;
+}
+
+footer {
+  background-color: white;
+  margin: 20px 0;
+  padding: 30px;
+  border-radius: 10px;  
+}
+
+/* section {
+  background-color: white;
+  margin: 20px 0;
+  border-radius: 10px;
+} */
+
+/* footer ul {
+  list-style: none;
+} */
+
+footer nav ul {
+  display: flex;
+  list-style: none;
+  align-items: center;
+  justify-content: center;
+  margin-bottom: 20px;
+}
+
+footer nav ul li{
+  margin: 0 15px;
+  transition: transform 0.2s;
+}
+
+footer nav ul li:hover {
+  transform: scale(1.5);
+  font-weight: bold;
+}
+
+footer a {
+  color: #232f3e;
+  text-decoration: none;
+  font-weight: 500;
+  text-align: center;
+  font-size: 18px;
+  
+}
+
+.copyright {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 5px;
+}
+
+footer h2 {
+  font-size: 15px;
+  font-weight: 300;
+  color: #232f3e;
+}
+
