--- a/style.css
+++ b/style.css
@@ -21,21 +21,18 @@ body {
 }
 
 main {
-  width: 1300px;
+  max-width: 1300px;
   background-color: #f5f5f5;
   /* border-radius:  10px  10px 10px 10px; */
-}
-
-header {
-  background-color: #232f3e;
-  padding: 20px;
-  width: 100%;
 }
 
 header {
   display: flex;
   justify-content: space-between;
   align-items: center;
+  background-color: #232f3e;
+  padding: 20px;
+  width: 100%;
 }
 
 header nav ul {
@@ -72,8 +69,8 @@ section {
 }
 
 .prod-img {
-  width: 600px;
-  height: 600px;
+  max-width: 600px;
+  height: auto;
   background-color: antiquewhite;
   background-repeat: no-repeat;
   background-size: cover;
@@ -290,7 +287,7 @@ footer nav ul li:hover {
 footer a {
   color: #232f3e;
   text-decoration: none;
-  font-weight: 500;
+  font-weight: 400;
   text-align: center;
   font-size: 18px;
   
@@ -309,3 +306,103 @@ footer h2 {
   color: #232f3e;
 }
 
+@media (max-width: 600px) {
+  section {
+    /* background-color: white; */
+  }
+
+  body {
+    align-items:flex-start;
+  }
+
+  main {
+    width: 100%;
+    /* height: 100vh; */
+  }
+
+  #product {
+    display: grid;
+    grid-template-rows: 1fr 1.2fr;
+  }
+
+  #main-bg {
+    padding: 0;
+    margin-bottom: 0;
+    background-size: cover;
+  }
+
+  .sub-img {
+    /* display: none; */
+    width: 100px;
+    height: auto;
+  }
+
+  .spec {
+    flex-direction: column;
+  }
+
+  .spec select {
+    width: 322px;
+    font-size: 12px;
+    margin-top: 10px;
+  }
+
+  .description button {
+    width: 100%;
+    border-radius: 30px;
+  }
+
+  .prod-cards {
+    /* justify-content: space-between; */
+    /* justify-content: space-around; */
+  }
+
+  .card-info {
+    padding: 0;
+  }
+
+  .card {
+    flex-direction: column;
+    /* align-items: center; */
+    width: 150px;
+    height: 250px;
+    /* border: 1px solid #232f3e; */
+    box-shadow: 0px 0px 2px #000000;
+    /* padding: 10px; */
+    border-radius: 15px;
+    transition: transform 0.2s;
+    background-color: white;
+  }
+
+  .card a {
+    width: 100%;
+  }
+
+  .card a img {
+    width: 100%;
+    height: auto;
+    border-radius: 15px 15px 0 0;
+  }
+
+  .card a img:hover {
+    transform: none;
+  }
+
+  .card:hover {
+    transform: scale(1.2);
+    box-shadow: 0px 0px 10px #000000;
+  }
+
+  .card-info {
+    font-size: 10px;
+    padding: 0 5px;
+  }
+
+  .card-info .star img {
+    width: 10px;
+  }
+
+  .prod-review {
+    flex-direction: column;
+  }
+}
