--- a/style.css
+++ b/style.css
@@ -320,6 +320,11 @@ footer h2 {
     width: 100%;
   }
 
+  html,
+  body {
+    overflow-x: hidden;
+  }
+
   header nav ul {
     flex-direction: column;
   }
@@ -372,113 +377,162 @@ footer h2 {
     margin-left: 50px;
   }
 
-  section {
-    /* background-color: white; */
-  }
-
-  body {
-    align-items: center;
-  }
-
   main {
     width: 90%;
-    /* height: 100vh; */
   }
 
   #product {
     display: grid;
-    grid-template-rows: 1fr 2.2fr;
+    margin: 20px 0;
+    /* background-color: red; */
+    /* justify-content: center; */
   }
 
   #main-bg {
+    width: 300px;
+    height: 300px;
+    margin: 0;
     padding: 0;
-    /* margin: 10px; */
-    margin-bottom: 0;
-    background-size: cover;
-    background-position: center;
+    align-self: center;
     justify-self: center;
+    margin: 20px 0;
   }
 
   .sub-img {
-    /* display: none; */
-    width: 100px;
+    width: 60px;
+    height: auto;
+  }
+
+  .prod-info {
+    padding: 20px;
+  }
+
+  .prod-review {
+    margin-bottom: 0;
+  }
+
+  .title h1 {
+    font-size: 20px;
+  }
+
+  .review p {
+    font-size: 12px;
+  }
+
+  .review img {
+    width: 15px;
     height: auto;
   }
 
   .spec {
     flex-direction: column;
+    padding: 10px 0;
+  }
+
+  .spec p {
+    font-size: 22px;
+    margin-bottom: 5px;
   }
 
   .spec select {
-    width: 322px;
+    font-size: 10px;
+    width: 230px;
+  }
+
+  .description {
+    padding: 10px 0;
+  }
+
+  .description p {
     font-size: 12px;
-    margin-top: 10px;
+    padding-bottom: 20px;
   }
 
   .description button {
+    font-size: 15px;
+    border-radius: 35px;
     width: 100%;
-    border-radius: 30px;
+    padding: 12px 30px;
+  }
+
+  #recommendation {
+    margin: 0;
+    padding: 20px;
+    margin-bottom: 20px;
+  }
+
+  #recommendation h2 {
+    font-size: 20px;
   }
 
   .prod-cards {
-    /* justify-content: space-between; */
-    /* justify-content: space-around; */
-  }
-
-  .card-info {
-    padding: 0;
+    justify-content: space-evenly;
+    gap: 10px;
   }
 
   .card {
     flex-direction: column;
-    /* align-items: center; */
-    width: 115px;
-    height: 215px;
-    /* border: 1px solid #232f3e; */
-    box-shadow: 0px 0px 2px #000000;
-    /* padding: 10px; */
-    border-radius: 15px;
-    transition: transform 0.2s;
-    background-color: white;
+    /* background-color: #f5f5f5; */
+    /* min-width: 70px; */
+    max-width: 100px;
+    height: 220px;
+    border-radius: 10px;
   }
 
-  .card a {
-    width: 100%;
+  .card:hover {
+    border: 1px solid black;
   }
 
   .card a img {
     width: 100%;
     height: auto;
-    border-radius: 15px 15px 0 0;
-  }
-
-  .card a img:hover {
-    transform: none;
-  }
-
-  .card:hover {
-    transform: scale(1.2);
-    box-shadow: 0px 0px 10px #000000;
+    border-top-left-radius: 10px;
+    border-top-right-radius: 10px;
   }
 
   .card-info {
     font-size: 10px;
     padding: 0 5px;
-    /* overflow: hidden; */
-    /* white-space: nowrap; */
   }
 
-  /* .card-name a {
-    white-space: nowrap;
-    overflow: hidden;
-    text-overflow: ellipsis;
-  } */
-
-  .card-info .star img {
+  .star img {
     width: 10px;
+    height: auto;
+  }
+
+  #reviews {
+    margin: 0;
+    padding: 20px;
+    margin-bottom: 20px;
+  }
+
+  #reviews h2 {
+    font-size: 20px;
+    text-align: center;
   }
 
   .prod-review {
     flex-direction: column;
+  }
+
+  .review-info h3 {
+    font-size: 12px;
+  }
+
+  .review-info img {
+    width: 10px;
+  }
+
+  .prod-review p {
+    font-size: 10px;
+  }
+
+  footer {
+    margin: 0;
+    padding: 20px;
+  }
+
+  footer ul li a {
+    font-size: 15px;
   }
 }
